# beachbot-models

./: .gitignore  README.md  pyproject.toml
src/beachbot-models/: models.py
src/beachbot-models/config/: config.py  model_card_config.yaml
src/beachbot-models/huggingface_api/: .hf.py.swp  __init__.py  hf.py
src/beachbot_models/: config.py  hf.py  models.py  supported_models.py
tests/: hf_test.py
